# splineOPRcpp

./: .Rbuildignore  .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  debug-test.R  example.ipynb  minimum-working-example.R  pyproject.toml  setup.py  splineOP.Rproj
R/: Hall_variance_estimation.R  RcppExports.R  add_noise.R  gaussian_filter.R  generate_Qspline_signal.R  generate_Qsplines.R  generate_multidimensional_spline.R  generate_segment_lengths.R  metrics.R  multidim_l1tf_constrained.R  naive_constrained.R  noise_signal.R  plot_Qsplines.R  precision_recall.R  predict_quadratic_spline.R  pruning-example.R  sample_alternating_accelerations.R  spline_generator.R  splineop.R
man/: Ksplines.Rd  add_noise.Rd  cpp_sum2.Rd  generate_Qspline_signal.Rd  generate_Qsplines.Rd  generate_multidimensional_spline.Rd  generate_segment_lengths.Rd  l1tf_constrained.Rd  naive_constrained.Rd  plot_Ksplines.Rd  plot_Qspline.Rd  plot_Qsplines.Rd  precision_recall.Rd  predict_quadratic_spline.Rd  sample_alternating_accelerations.Rd  splineOP-package.Rd  square_states.Rd
simulations/: example-constrained.R  example-pruning.R  test-splineOP.R  test-time.R  test_splineOP.R  test_time.R  validate-theorem-3.R
simulations/paper/1-benchmarking/scripts/: l1tf-constrained.R  naive-constrained.R  predict-cpt-splineop-constrained.R
simulations/paper/data/: data-generation.R
simulations/paper/data/synth/: 1-data-generation.R  2-noise-data.R
src/: Faulhaber.cpp  Faulhaber.h  Makevars  Matrix.cpp  Matrix.h  MatrixExposure.h  QuadraticCost.cpp  QuadraticCost.h  QuadraticCost_Rcpp.cpp  QuadraticCost_Rcpp_ignore.cpp  RcppExports.cpp  Rcpp_Wrap_Specialization.h  SpeedEstimator.cpp  SpeedEstimator.h  SplineOP.cpp  SplineOP.h  SplineOP_Rcpp.cpp  SplineOP_constrained.cpp  SplineOP_constrained.h  SplineOP_iterated.cpp  SplineOP_iterated.h  py_bindings.cpp  splineOP.cpp  splineOP.h  splineOP2_Rcpp_ignore.cpp  splineOP2_ignore.cpp  splineOP2_ignore.h  splineOP_Rcpp.cpp  sum_example.cpp
src/SplineOP/: __init__.py
