[build-system]
requires = ["scikit-build-core>=0.5", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "splineop"
version = "0.1.0" # Change this as you develop
description = "Find changes in accelerations with quadratic splines.."
readme = "README.md"
authors = [
    {name = "Nicolas", email = "nicolas.cecchi1@ens-paris-saclay.fr"},
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["pybind11", "cmake", "cpp"]
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
]
